--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
 
     <packaging>pom</packaging>
 
+    <scm>
+        <connection>scm:git:https://github.com/nvdb-opensource/sosi-reader.git</connection>
+    </scm>
+
     <distributionManagement>
         <snapshotRepository>
             <id>kantega-snapshots</id>
@@ -23,8 +27,8 @@
     <properties>
         <junit.version>4.11</junit.version>
         <slf4j.version>1.7.5</slf4j.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hamcrest.version>1.3</hamcrest.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <modules>
@@ -59,31 +63,6 @@
         </dependencies>
     </dependencyManagement>
 
-    <!--repositories>
-        <repository>
-            <id>locallibs</id>
-            <url>http://opensource.kantega.no/nexus/content/groups/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>opensource.kantega.no-snapshots</id>
-            <name>Kantega OpenSource - Snapshots</name>
-            <url>http://opensource.kantega.no/nexus/content/repositories/snapshots/</url>
-            <layout>default</layout>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories-->
-
     <build>
         <pluginManagement>
             <plugins>
@@ -106,11 +85,6 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.17</version>
                     <configuration>
-                        <!--systemPropertyVariables>
-                            <testdb.url>${testdb.url}</testdb.url>
-                            <testdb.username>${testdb.username}</testdb.username>
-                            <testdb.password>${testdb.password}</testdb.password>
-                        </systemPropertyVariables-->
                     </configuration>
                 </plugin>
             </plugins>
