--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>no.vegvesen.nvdb</groupId>
         <artifactId>sosi-reader</artifactId>
-        <version>1.19</version>
+        <version>1.20-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
