--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
 
     <groupId>no.vegvesen.nvdb</groupId>
     <artifactId>sosi-reader</artifactId>
-    <version>1.19</version>
+    <version>1.20-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
     <scm>
         <connection>scm:git:git@github.com:nvdb-vegdata/sosi-reader.git</connection>
-        <tag>sosi-reader-1.19</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
