--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+*.project
+*.settings
+*.classpath
 
 
 ### Intellij ###
