--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -7,7 +7,7 @@
         <groupId>no.vegvesen.nvdb</groupId>
         <artifactId>sosi-reader</artifactId>
         <version>1.26</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../wrapper/pom.xml</relativePath>
     </parent>
 
     <artifactId>sosi-reader-impl</artifactId>
@@ -33,4 +33,8 @@
         </dependency>
     </dependencies>
 
+
+  <scm>
+    <tag>sosi-reader-1.26</tag>
+  </scm>
 </project>
