--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>no.vegvesen.nvdb</groupId>
         <artifactId>sosi-reader</artifactId>
-        <version>1.26</version>
+        <version>1.27-SNAPSHOT</version>
         <relativePath>../wrapper/pom.xml</relativePath>
     </parent>
 
