[maven-release-plugin] prepare release sosi-reader-1.26

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>no.vegvesen.nvdb</groupId>
         <artifactId>sosi-reader</artifactId>
-        <version>1.26-SNAPSHOT</version>
+        <version>1.26</version>
     </parent>
 
     <artifactId>sosi-reader-impl</artifactId>
