--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>no.vegvesen.nvdb</groupId>
     <artifactId>sosi-reader</artifactId>
-    <version>1.26-SNAPSHOT</version>
+    <version>1.26</version>
 
     <packaging>pom</packaging>
 
